read helm values from config map

--- a/clusters/kbot/kbot-hr.yaml
+++ b/clusters/kbot/kbot-hr.yaml
@@ -15,5 +15,5 @@ spec:
         name: kbot
   interval: 1m0s
   valuesFrom:
-    - kind: Secret
-      name: kbot-otel-helm-values
+    - kind: ConfigMap
+      name: helm-values
